@@ -2376,6 +2376,7 @@ Possible alternatives to the word 'content' are 'subject matter' or 'wiki subjec
 * $1 is the number of interwiki links.",
 'nlinks' => 'This appears in brackets after each entry on the special page [[Special:MostLinked]]. $1 is the number of wiki links.',
 'nmembers' => 'Appears in brackets after each category listed on the special page [[Special:WantedCategories]]. $1 is the number of members of the category.',
+'nredirects' => "Used in the special page '[[Special:MostRedirects]]' in brackets after each entry on the list signifying how many redirects a page has. $1 is the number of redirects.",
 'nrevisions' => 'Number of revisions.',
 'nviews' => 'This message is used on [[Special:PopularPages]] to say how many times each page has been viewed. Parameter $1 is the number of views.',
 'nimagelinks' => 'Used on [[Special:MostLinkedFiles]] to indicate how often a specific file is used.',
@@ -2405,6 +2406,7 @@ $1 is a page title",
 'mostcategories' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'mostimages' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'mostinterwikis' => 'Name of special page displayed in [[Special:SpecialPages]]',
+'mostredirects' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'mostrevisions' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'prefixindex' => 'The page title of [[Special:PrefixIndex]]. When the user limits the list to a certain namespace, {{msg-mw|allinnamespace}} is used instead.',
 'prefixindex-namespace' => 'The page title of [[Special:PrefixIndex]] limited to a specific namespace. Similar to {{msg-mw|allinnamespace}}. $1 is the name of the namespace',
