@@ -1655,6 +1655,7 @@ $wgMessageStructure = array(
 		'ninterwikis',
 		'nlinks',
 		'nmembers',
+		'nredirects',
 		'nrevisions',
 		'nviews',
 		'nchanges',
@@ -1701,6 +1702,8 @@ $wgMessageStructure = array(
 		'mostimages-summary',
 		'mostinterwikis',
 		'mostinterwikis-summary',
+		'mostredirects',
+		'mostredirects-summary',
 		'mostrevisions',
 		'mostrevisions-summary',
 		'prefixindex',
