@@ -148,6 +148,7 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
   been removed.
 * (bug 34939) Made link parsing insensitive ([HttP://]).
 * (bug 40072) Add CSS classes to items in output of ChangesList pages.
+* Create Special:MostRedirects.
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
